@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Markus Gutschke <markus@shellinabox.com>
 Build-Depends: debhelper (>= 4.0.0), binutils, libssl-dev, libpam0g-dev,
  zlib1g-dev
-Standards-Version: 3.6.1
+Standards-Version: 3.8.3
 
 Package: shellinabox
 Section: web
