@@ -4,6 +4,13 @@
 	sure we at least attempt to keep copyright dates updated whenever we
 	make changes.
 
+	* Added checks that the debian/changelog file is up-to-date
+
+	* Added debian/watch file
+
+	* Updated the Standards-Version in debian/control. Still need to
+	review whether we are in full compliance, though.
+
 2009-11-29  Markus Gutschke  <markus@shellinabox.com>
 
 	* Preparations for packaging ShellInABox in a way that makes it
